objects/Step_Forward_Job__c.object
<CustomObject>
    <description>Step Forward Jobs</description>
    <fields>
        <fullName>Account_Manager_to_book_interviews__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Matching check this box to alert account manager to book interview&apos;</inlineHelpText>
        <label>Account Manager to book interviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Post_Code__c</fullName>
        <formula>Step_Forward_Account_Management_Name__r.Account_Post_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_Fee_for_Employer__c</fullName>
        <label>Agreed Fee for Employer</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Associate_Name__c</fullName>
        <inlineHelpText>Name of Associate</inlineHelpText>
        <label>Allocated Associate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocated_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated Associate</label>
        <referenceTo>Step_Forward_Activity__c</referenceTo>
        <relationshipLabel>Step Forward Jobs</relationshipLabel>
        <relationshipName>Step_Forward_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_by_Account_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I am satisfied that this employer and this role meet Step Forward’s quality standards in every way, and that the position is ready to be advertised to candidates.</inlineHelpText>
        <label>Approved by Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Line_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Line Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_confirmed_fr_Matching_Eve_Emp__c</fullName>
        <label>Attendance confirmed fr Matching Eve-Emp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuesday 31 March Slot 1</fullName>
                </value>
                <value>
                    <fullName>Tuesday 31 March Slot 2</fullName>
                </value>
                <value>
                    <fullName>Tuesday 31 March Slot 3</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28 April Slot 1</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28 April Slot 2</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28 April Slot 3</fullName>
                </value>
                <value>
                    <fullName>Thursday 18 June Slot 1</fullName>
                </value>
                <value>
                    <fullName>Thursday 18 June Slot 2</fullName>
                </value>
                <value>
                    <fullName>Thursday 18 June Slot 3</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14 July Slot 1</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14 July Slot 2</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14 July Slot 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidates_NOT_intending_to_go_to_uni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidates NOT intending to go to uni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conf_Email_with_CVs_sent__c</fullName>
        <label>Conf. Email with CVs sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conf_Email_with_CVs_sent_to_Empl__c</fullName>
        <inlineHelpText>Date Account Management send the email with CVs to Employer.</inlineHelpText>
        <label>Conf. Email with CVs sent to Empl.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conf_email_with_CVs_checked_Initial__c</fullName>
        <inlineHelpText>Matching check email and send to Account Management if correct. Put initials here.</inlineHelpText>
        <label>Conf. email with CVs checked - Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conf_email_with_CVs_drafted_Initial__c</fullName>
        <inlineHelpText>Matching draft email and put initials here</inlineHelpText>
        <label>Conf. email with CVs drafted - Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_feedback_uploaded_Initial__c</fullName>
        <inlineHelpText>Add initial to confirm when  interview feedback uploaded to matching tool.</inlineHelpText>
        <label>Confirm feedback uploaded - Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Pack_Sent__c</fullName>
        <inlineHelpText>Date confirmation pack sent to Empl. including MOU, JD, H&amp;S.</inlineHelpText>
        <label>Confirmation Pack Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirming_Matching_Result__c</fullName>
        <label>Confirming Matching Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In discussion</fullName>
                </value>
                <value>
                    <fullName>Attending</fullName>
                </value>
                <value>
                    <fullName>Not attending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirming_matching_Notes__c</fullName>
        <label>Confirming matching Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Employer_Email__c</fullName>
        <label>Contracting Lead Employer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Employer__c</fullName>
        <inlineHelpText>Person who&apos;s name will be on the contract. -EMPLOYER</inlineHelpText>
        <label>Contracting Lead Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Step_Forward__c</fullName>
        <defaultValue>&quot;Aoife Mcloughlin&quot;</defaultValue>
        <inlineHelpText>Person who will show up on the contract - STEP FORWARD</inlineHelpText>
        <label>Contracting Lead Step Forward</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_Lead_Step_Forward_email__c</fullName>
        <defaultValue>&quot;aoife.mcloughlin@the-challenge.org&quot;</defaultValue>
        <label>Contracting Lead Step Forward email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Count_Step_Forward__c</fullName>
        <label>Step Forward Event Components</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_HS_Form_signer_by_employer__c</fullName>
        <label>Date HS Form signed by employer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_called_confirming_matching__c</fullName>
        <label>Date called confirming matching</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_formal_invite_to_matching_sent__c</fullName>
        <label>Date formal invite to matching sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_contact_employer_again__c</fullName>
        <inlineHelpText>If the Employer is not yet ready for interview, but could possibly be in the future ,set a future date to contact them again</inlineHelpText>
        <label>Date to contact employer again</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_manager_about_JD_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email manager about JD check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empl_shortlisted_for_matching_day__c</fullName>
        <label>Empl- shortlisted for matching day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Reference_Number__c</fullName>
        <inlineHelpText>Used by Delivery</inlineHelpText>
        <label>Employer Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_Special_Requests__c</fullName>
        <label>Employer Special Requests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Step_Forward_Account_Management_Name__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_allocated_to_matching_day__c</fullName>
        <label>Employer allocated to matching day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_available_for_interview__c</fullName>
        <label>Employer available for interview?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_eligible_for_AGE_grant__c</fullName>
        <description>AGE grant tracking field</description>
        <label>Employer eligible for AGE grant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Employer not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_liability_insurance_expiry__c</fullName>
        <inlineHelpText>Please enter the date that the employer liability insurance expires</inlineHelpText>
        <label>Employer liability insurance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_s_availability_for_I_views__c</fullName>
        <description>Careful when editing heavily dependent on a formula field!</description>
        <label>Employer&apos;s availability for I-views</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuesday 31st March 9am-12pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 31st March 12pm-3pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 31st March 3pm-6pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28th April 9am-12pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28th April 12pm-3pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28th April 3pm-6pm</fullName>
                </value>
                <value>
                    <fullName>Thursday 18th June 9am-12pm</fullName>
                </value>
                <value>
                    <fullName>Thursday 18th June 12pm-3pm</fullName>
                </value>
                <value>
                    <fullName>Thursday 18th June 3pm-6pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14th July 9am-12pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14th July 12pm-3pm</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14th July 3pm-6pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <label>Exclusive?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Payment_Terms_Type__c</fullName>
        <label>Fee Payment Terms Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment of Training Fee in Full</fullName>
                </value>
                <value>
                    <fullName>Payment of Training Fee in Three Separate Instalments</fullName>
                </value>
                <value>
                    <fullName>No Payment of Training Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Payment_Terms__c</fullName>
        <label>Fee Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_QC_check__c</fullName>
        <formula>if(

and(
Full_job_description__c=true,MOU__c=true,Health_Safety_risk_assessment_form__c=true, not(isblank(Employer_liability_insurance_expiry__c)),Approved_by_Account_Owner__c=true,Approved_by_Line_Manager__c=true,not(isblank( Date_HS_Form_signer_by_employer__c ))
),

&quot;Ready to contract&quot;,&quot;Not ready to contract&quot;

)</formula>
        <label>Final QC check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_call_pre_interview_made__c</fullName>
        <label>Follow up call pre-interview made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_job_description__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please make sure that the full job description is attached before this box it ticked.</inlineHelpText>
        <label>Full job description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_11__c</fullName>
        <inlineHelpText>3 Extrovert
-3 Introvert</inlineHelpText>
        <label>Group 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_21__c</fullName>
        <inlineHelpText>3 Creative
-3 Methodical</inlineHelpText>
        <label>Group 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_31__c</fullName>
        <inlineHelpText>+3 Collaborator
-3 Autonomous</inlineHelpText>
        <label>Group 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Safety_risk_assessment_form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please make sure that the health &amp; safety risk assessment form is attached before this box is ticked.</inlineHelpText>
        <label>Health &amp; Safety risk assessment form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_job_Stream__c</fullName>
        <label>IT job Stream</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Pathway__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Software and web development</fullName>
                </value>
                <value>
                    <fullName>Network &amp; hardware support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Availability__c</fullName>
        <label>Interview Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Availability_call_made__c</fullName>
        <inlineHelpText>The date we call to to invite them to interview</inlineHelpText>
        <label>Interview Availability call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Availability_call_result__c</fullName>
        <inlineHelpText>Be careful when changing the name as it may affect existing integrations.</inlineHelpText>
        <label>Interview Availability call result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attending</fullName>
                </value>
                <value>
                    <fullName>Not attending</fullName>
                </value>
                <value>
                    <fullName>In discussion</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Result__c</fullName>
        <label>Interview Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful - Empl. declined</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful - YP declined</fullName>
                </value>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_availability_email_sent__c</fullName>
        <inlineHelpText>Date email sent confirming invite to interview, requesting RSVP within 24 hours</inlineHelpText>
        <label>Interview availability email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JD_Download_link__c</fullName>
        <label>JD Download link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JD_ID__c</fullName>
        <formula>LEFT(RIGHT(  JD_Link__c  ,49),44)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JD ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JD_Link__c</fullName>
        <inlineHelpText>Paste your JD here</inlineHelpText>
        <label>JD Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JD_checked_by_manager__c</fullName>
        <label>JD checked by manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Address__c</fullName>
        <label>Job Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Difficult_to_Match_reason__c</fullName>
        <label>Job Difficult to Match reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate shortage due to postcode</fullName>
                </value>
                <value>
                    <fullName>Candidate shortage in this pathway</fullName>
                </value>
                <value>
                    <fullName>Candidate shortage for person specification</fullName>
                </value>
                <value>
                    <fullName>Lack of interest in JD from candidates</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Matching_Status__c</fullName>
        <formula>if(and(MOU__c=true,not(isnull(Agreed_Fee_for_Employer__c)),not(ispickval(Fee_Payment_Terms_Type__c,&quot;&quot;)),Full_job_description__c=true,not(ispickval(Pathway__c,&quot;&quot;)),not(isblank(Job_Address__c)),not(isblank(Job_Postcode__c)),Approved_by_Account_Owner__c=true,Approved_by_Line_Manager__c=true),&quot;Ready for Interview&quot;,&quot;All criteria not met&quot;)</formula>
        <label>Job Matching Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Postcode__c</fullName>
        <label>Job Postcode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Specific_interests__c</fullName>
        <inlineHelpText>Does the job require the Associate to have a Specific Interest? (please select between 0-3)</inlineHelpText>
        <label>Job Specific interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Charity / Social Action</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Event Management</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government &amp; Politics</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>HR &amp; Recruitment</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; PR</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>OTHER (see OTHER field)</fullName>
                </value>
                <value>
                    <fullName>Property / Facilities Management</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Transport</fullName>
                </value>
                <value>
                    <fullName>Youth Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. In discussion</fullName>
                </value>
                <value>
                    <fullName>2. Verbal confirmation</fullName>
                </value>
                <value>
                    <fullName>3. All docs signed off and ready for matching</fullName>
                </value>
                <value>
                    <fullName>4. Closed: Job confirmation unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_cycle__c</fullName>
        <formula>text(Step_Forward_Account_Management_Name__r.Recruitment_cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_difficult_to_match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will email matching team to inform them of this.</inlineHelpText>
        <label>Job difficult to match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_main_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Main contact for specific job</inlineHelpText>
        <label>Job main contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Step Forward Jobs</relationshipLabel>
        <relationshipName>Step_Forward_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_JD__c</fullName>
        <label>Link to JD</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MOU_Received_date__c</fullName>
        <label>MOU Received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOU__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Memorandum of Understanding</inlineHelpText>
        <label>MOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_email_for_JD_check__c</fullName>
        <label>Manager email for JD check</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Matching_Comms_Notes__c</fullName>
        <inlineHelpText>Free text box to write any notes regarding matching communications.</inlineHelpText>
        <label>Matching Comms Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matching_Communication_notes__c</fullName>
        <label>Matching Communication notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matching_date_Empl_allocated_to__c</fullName>
        <label>Matching date Empl. allocated to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_date_shortlisted_for__c</fullName>
        <inlineHelpText>The date of the interview we want to invite the Employer to (added by matching)</inlineHelpText>
        <label>Matching date shortlisted for</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_entry__c</fullName>
        <inlineHelpText>Please use this field to enter your notes.</inlineHelpText>
        <label>Notes entry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTHER__c</fullName>
        <description>To be completed when &quot;Other&quot; option is selected in Job Specific Interests</description>
        <inlineHelpText>To be completed when &quot;Other&quot; option is selected in Job Specific Interests</inlineHelpText>
        <label>OTHER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_AGE_grant_form_received__c</fullName>
        <description>AGE grant tracking field</description>
        <label>Original AGE grant form received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_call_made__c</fullName>
        <inlineHelpText>The date we call to let them know the final outcome of the interviews.</inlineHelpText>
        <label>Outcome call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_call_result__c</fullName>
        <inlineHelpText>What is the outcome of the call?</inlineHelpText>
        <label>Outcome call result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Left message</fullName>
                </value>
                <value>
                    <fullName>Spoke to Empl. - accepted</fullName>
                </value>
                <value>
                    <fullName>Spoke to Empl. -  Did not accept</fullName>
                </value>
                <value>
                    <fullName>Spoke to Empl.- In discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_email_sent_to_Empl__c</fullName>
        <inlineHelpText>Date the email sent to Empl. confirming the final outcome of the interviews.</inlineHelpText>
        <label>Outcome email sent to Empl.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pathway__c</fullName>
        <inlineHelpText>This is the pathway this job is connected to</inlineHelpText>
        <label>Pathway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Business Administration</fullName>
                </value>
                <value>
                    <fullName>IT, Software and Telecoms</fullName>
                </value>
                <value>
                    <fullName>Social Media &amp; Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>Early Years Education</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positions_available__c</fullName>
        <inlineHelpText>The amount of associates this job needs</inlineHelpText>
        <label>Positions available</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_interview_courtesy_call_made_to_Emp__c</fullName>
        <inlineHelpText>The date we call to ask how the interviews went.</inlineHelpText>
        <label>Post interview courtesy call made to Emp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preinterview_briefing_call_made__c</fullName>
        <inlineHelpText>Call to check they know interview details</inlineHelpText>
        <label>Pre-interview briefing call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Control Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_Charity_Number__c</fullName>
        <label>Registered Charity Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registered_Company_Number__c</fullName>
        <label>Registered Company Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registered_Organisation_Address__c</fullName>
        <formula>Step_Forward_Account_Management_Name__r.Registered_Organisation_Address__c</formula>
        <label>Registered Organisation Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Organisation_Name__c</fullName>
        <formula>Step_Forward_Account_Management_Name__r.Registered_Organisation_Name__c</formula>
        <label>Registered Organisation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_of_courtesy_call__c</fullName>
        <label>Result of courtesy call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke to Empl.</fullName>
                </value>
                <value>
                    <fullName>Left message</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_of_pre_interview_call__c</fullName>
        <label>Result of pre-interview call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke to Empl.</fullName>
                </value>
                <value>
                    <fullName>Left message</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Account_Owner__c</fullName>
        <formula>Step_Forward_Account_Management_Name__r.Step_Forward_Owner__r.FirstName &amp; &quot; &quot; &amp;  Step_Forward_Account_Management_Name__r.Step_Forward_Owner__r.LastName</formula>
        <label>SF Account Owner</label>
        <type>Text</type>
    </fields>
</CustomObject>